# Antistasi_Logbook

./: .editorconfig  .favorites.json  .gitignore  .pydeps  LICENSE  README.md  README.rst  TODO.md  antistasi_logbook_resources.py  pyproject.toml  record_parsing_errors.txt  report  tasks.py
.qt_for_python/rcc/: systray.py  textedit.py
.qt_for_python/uic/: main_widget.py
antistasi_logbook/: __init__.py  __main__.py  apsw.cp310-win_amd64.pyd  backend.py  errors.py  types.py  updater.py
antistasi_logbook/call_tree/: call_tree_item.py
antistasi_logbook/data/: __init__.py  cli_help_view.css  color_config.ini  color_configspec.json  content_types.py  general_config.ini  general_configspec.json  misc.py  sqf_syntax_data.py
antistasi_logbook/data/coordinates/: __init__.py  altis_pos.json  anizay_pos.json  chernarus_winter_pos.json  enoch_pos.json  malden_pos.json  sahrani_pos.json  takistan_pos.json  tanoa_pos.json  tembelan_pos.json  virolahti_pos.json
antistasi_logbook/data/map_images/: __init__.py
antistasi_logbook/data/templates/: __init__.py  about_stylesheet.css  about_template.jinja_html  cli_argument_templates.py  debug_list_of_dicts_content.jinja_html
antistasi_logbook/debug_dump/: message.json  most_common_messages.txt
antistasi_logbook/dev_temp/config/: general_config.ini
antistasi_logbook/gui/: application.py  debug.py  main_widget.py  main_window.py  menu_bar.py  misc.py  settings_window.py  status_bar.py  sys_tray.py
antistasi_logbook/gui/diagram/: abstract_stats_model.py
antistasi_logbook/gui/main_tab_display/: main_tab_widget.py
antistasi_logbook/gui/models/: __init__.py  antistasi_function_model.py  arma_function_model.py  base_query_data_model.py  game_map_model.py  log_file_model.py  log_files_model.py  log_levels_model.py  log_records_model.py  mods_model.py  record_classes_model.py  record_origins_model.py  remote_storages_model.py  server_model.py  style_sheets_model.py  version_model.py
antistasi_logbook/items/: base_item.py  enums.py  game_map.py  log_file.py  server.py
antistasi_logbook/parsing/: diagnostic_parser.py  diagnostic_parser_output_char_numbers.json  diagnostic_parser_output_line_numbers.json  entry_splitter.py  foreign_key_cache.py  meta_log_finder.py  parser.py  parsing_context.py  py_raw_record.py  raw_record.py  raw_sql_phrase.py  record_line.py  record_line.pyx  record_processor.py
antistasi_logbook/records/: __init__.py  abstract_record.py  antistasi_records.py  base_record.py  enums.py  generic_records.py  record_class_manager.py  special_message_formats.py
antistasi_logbook/regex/: record_grammar.py  regex_keeper.py  regex_pattern.py  scanner.py
antistasi_logbook/regex_store/: regex_keeper.py
antistasi_logbook/storage/: __init__.py  database.py  enums.py  sqlite_database.py  storage_db.py  table.py
antistasi_logbook/updating/: __init__.py  info_item.py  remote_managers.py  time_handling.py  update_manager.py  updater.py
antistasi_logbook/utilities/: __init__.py  apsw_profiling.py  conversion_utilities.py  date_time_utilities.py  enums.py  file_handling.py  github_utils.py  gui_utilities.py  html_generation.py  local_image.py  locks.py  misc.py  networker_limiter.py  nextcloud.py  paired_reader.py  parsing_misc.py  path_utilities.py  rich_styles.py  row_instance_cache.py  threads.py
antistasi_logbook/webdav/: info_item.py  remote_item.py  webdav_manager.py
designer_files/: blah.qrc  dialog.py  dialog.ui  main_widget.py  main_widget.ui  main_window.py  main_window.ui
designer_files/resources/: antistasi_logbook_resources.qrc
designer_files/ressources/: antistasi_logbook_main_ressources.qrc
docs/: .buildinfo  TODO.md  genindex.html  glossary.html  index.html  links.html  make.bat  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  glossary.doctree  index.doctree  links.doctree
docs/_sources/: glossary.rst.txt  index.rst.txt  links.rst.txt
docs/_static/: basic.css
docs/description/: description_index.html
docs/development/: development_index.html  plans.html
docs/docs_data/: collected_todos.json  general_todo_data.json
docs/source/: conf.py  glossary.rst  index.rst  links.rst
docs_source/: make.bat
docs_source/source/: conf.py  create_db_diagram.py  glossary.rst  index.rst  links.rst
test/data/: __init__.py  fake_info_data.json  fake_ls_data.json
test/updater_tests/: conftest.py  test_updater.py
tests/data/: __init__.py  fake_info_data.json
tests/parsing_tests/: conftest.py  multiline_records_file_2_auto_param_data.py  test_meta_log_finder.py  test_parser.py
tests/profiling/: profile_backend.py
tests/updating_tests/: conftest.py  fixed_check_record.json  random_log_files.json  random_records.json  test_updater.py
tests/utility_tests/: test_file_handling.py
tools/: README.md  analyze_db.cmd  autoflake_all.cmd  bin_data_pack.cmd  compile_deps.cmd  convert_compiled_deps.py  create_only_project.cmd  create_venv.cmd  create_venv_extra_envvars.py  cythonize_file.cmd  delete_venv.py  download_install_apsw.cmd  get_file_hash.py  idle_from_venv.cmd  install_into_venv.cmd  installed_packages_to_json.py  line_profile_it.cmd  log_pipe_create_venv.cmd  make_readme.cmd  map_icons_from_svg_to_png.py  memory_profile_text.cmd  memory_profiling_time.cmd  memory_profiling_time__main__.cmd  nuitka_it.cmd  peewee_models.dot  pipreqs_create_requirements.cmd  prepare_venv_settings.py  profile_with_all_profiler.cmd  profiling_to_graph.cmd  profiling_to_graph__main__.cmd  profiling_to_text.cmd  pygraphviz.cmd  pygraphviz.ps1  pyinstall_it.cmd  quick_pyinstaller_noconsole.bat  remove_connect_by_name.py  svg_to_png.py  temp_modfiy_profile_decorators.py
tools/quick_scripts/: add_tags_to_style_sheet.py  blah.json  blah.txt  get_all_entries.py  highlight_example.py  make_thumbnail.py  quick_scribble.py
tools/scripts_help/: pyside6-uic_help.md  pyside_rcc_help.md
tools/venv_setup_settings/: post_setup_scripts.txt  required_dev.txt  required_experimental.txt  required_gui.txt  required_misc.txt  required_personal_packages.txt  required_test.txt
(+486 files in other folders)
