[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "antistasi_logbook"
authors = [{ name = "antistasi_tools" }]
classifiers = ["License :: OSI Approved :: MIT License"]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ['version', 'description']
requires-python = ">=3.9"
dependencies = [
    "Cython>=0.29.28",
    "PySide6>=6.2.3",
    "anyio>=3.5.0",
    "appdirs>=1.4.4",
    "attrs>=21.4.0",
    "PyGithub>=1.55",
    "certifi>=2021.10.8",
    "cffi>=1.15.0",
    "charset-normalizer>=2.0.10",
    "colorhash>=1.0.4",
    "cryptography>=36.0.1",
    "gidapptools>=0.2.3",
    "httpcore==0.13.7",
    "httpx>=0.20.0",
    "inflect>=5.3.0",
    "jinja2>=2.11.3",
    "matplotlib>=3.5.1",
    "multidict>=5.2.0",
    "natsort>=8.0.2",
    "numpy>=1.22.0",
    "peewee>=3.14.8",
    "pillow~=8.4.0",
    "markupsafe>=2.0.1",
    "platformdirs~=2.5.1",
    "pp-ez==0.2.0",
    "pprintpp==0.4.0",
    "psutil==5.9.0",
    "py-notifier==0.3.2",
    "pycparser>=2.21",
    "pygments>=2.11.2",
    "pyparsing>=3.0.6",
    "pyqtgraph>=0.12.3",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.19.2",
    "pytz>=2021.3",
    "qdarkstyle>=3.0.3",
    "qt-material>=2.8.19",
    "qtawesome>=1.1.1",
    "rich>=12.0.0",
    "sortedcontainers>=2.4.0",
    "tzdata>=2021.5",
    "tzlocal>=4.1",
    "uritools>=4.0.0",
    "urlextract>=1.5.0",
    "webdav4>=0.9.3",
    "yarl>=1.7.2",
    "keyring>=23.5.0",
    "frozendict==2.3.0"
]

[project.urls]
Source = "https://github.com/Giddius/Antistasi_Logbook"

[project.scripts]
antistasi-logbook = "antistasi_logbook.__main__:main"

[project.optional-dependencies]

[tool.flit.sdist]
exclude = [
    "misc",
    "temp",
    "docs",
    "tools",
    ".pydeps",
    "tests",
    ".gitattributes",
    ".gitignore",
    ".editorconfig",
    "planning.todo",
    "tasks.py",
    "designer_files",
    ".vscode",
    ".favorites.json",
    ".venv",
    ".pytest_cache",
    "__pycache__"
]

[tool.autopep8]
ignore = ["E402", "E501", "E731"]
max_line_length = 250

[tool.isort]
balanced_wrapping = true
ensure_newline_before_comments = true
group_by_package = true
import_heading_firstparty = "* Local Imports --------------------------------------------------------------------------------------->"
import_heading_gid = "* Gid Imports ----------------------------------------------------------------------------------------->"
import_heading_qt = "* Qt Imports --------------------------------------------------------------------------------------->"
import_heading_stdlib = "* Standard Library Imports ---------------------------------------------------------------------------->"
import_heading_thirdparty = "* Third Party Imports --------------------------------------------------------------------------------->"
known_gid = ["gid*"]
known_qt = ["PyQt5", "PyQt6", "PySide6", "pyqtgraph"]
length_sort = true
line_length = 200
lines_after_imports = 1
sections = [
    "FUTURE",
    "STDLIB",
    "QT",
    "THIRDPARTY",
    "GID",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
indented_import_headings = false

[tool.pytest.ini_options]
addopts = "-rA -vv --durations=0 --capture=tee-sys --show-capture=all --color=auto --code-highlight=yes"

[tool.autoflake]
# additional_imports=None
expand_star_imports = true
remove_all_unused_imports = true
remove_duplicate_keys = false
remove_unused_variables = false
ignore_init_module_imports = false

[tool.gid_tasks.imports_cleaner]
exclude_globs = [
    "**/sqf_syntax_data.py",
    "**/antistasi_logbook_resources.py",
    "**/antistasi_logbook_resources_accessor.py"
]
exclude_init_files = true
ignore_missing_import_section = true
