[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "antistasi_logbook"
authors = [{ name = "antistasi_tools" }]
classifiers = ["License :: OSI Approved :: MIT License"]
license = { file = "LICENSE" }
readme = { file = "README.rst", content-type = "text/x-rst" }

description = "WiP"
dynamic = ['version']
requires-python = ">=3.9"
dependencies = [
    "apsw",
    "anyio==3.6.1",
    "appdirs==1.4.4",
    "attrs==21.4.0",
    "certifi==2022.5.18.1",
    "cffi==1.15.0",
    "charset-normalizer==2.0.12",
    "click==8.1.3",
    "colorama==0.4.4",
    "colorhash==1.0.4",
    "commonmark==0.9.1",
    "cryptography==37.0.2",
    "cycler==0.11.0",
    "cython==0.29.30",
    "deprecated==1.2.13",
    "filelock==3.7.1",
    "fonttools==4.33.3",
    "frozendict==2.3.0",
    "gidapptools[all]==0.3.0",
    "h11==0.12.0",
    "httpcore==0.15.0",
    "httpx==0.23.0",
    "idna==3.3",
    "importlib-metadata==4.11.4",
    "inflect==5.6.0",
    "jinja2==3.1.2",
    "keyring==23.5.1",
    "kiwisolver==1.4.2",
    "markupsafe==2.1.1",
    "matplotlib==3.5.2",
    "multidict==6.0.2",
    "natsort==8.1.0",
    "numpy==1.22.4",
    "packaging==21.3",
    "peewee==3.14.10",
    "pillow==8.4.0",
    "platformdirs==2.5.2",
    "pp-ez==0.2.0",
    "pprintpp==0.4.0",
    "psutil==5.9.0",
    "py-notifier==0.3.2",
    "pycparser==2.21",
    "pygithub==1.55",
    "pygments==2.12.0",
    "pyjwt==2.4.0",
    "pynacl==1.5.0",
    "pyparsing==3.0.9",
    "pypiwin32==223",
    "pyqtgraph==0.12.4",
    "pyside6==6.3.0",
    "pyside6-addons==6.3.0",
    "pyside6-essentials==6.3.0",
    "python-dateutil==2.8.2",
    "python-dotenv==0.20.0",
    "pytz==2022.1",
    "pytz-deprecation-shim==0.1.0.post0",
    "pywin32==304",
    "pywin32-ctypes==0.2.0",
    "qdarkstyle==3.1",
    "qt-material==2.12",
    "qtawesome==1.1.1",
    "qtpy==2.1.0",
    "requests==2.27.1",
    "rfc3986[idna2008]==1.5.0",
    "rich==12.2.0",
    "shiboken6==6.3.0",
    "six==1.16.0",
    "sniffio==1.2.0",
    "sortedcontainers==2.4.0",
    "tzdata==2022.1",
    "tzlocal==4.2",
    "uritools==4.0.0",
    "urlextract==1.6.0",
    "urllib3==1.26.9",
    "webdav4==0.9.7",
    "win10toast==0.9",
    "wrapt==1.14.1",
    "yarl==1.7.2",
    "zipp==3.8.0",
]

[project.urls]
Source = "https://github.com/Giddius/Antistasi_Logbook"
homepage = "https://github.com/Giddius/Antistasi_Logbook"

[project.scripts]
antistasi-logbook = "antistasi_logbook.__main__:main"

[project.optional-dependencies]

[tool.flit.sdist]
exclude = [
    "misc",
    "temp",
    "docs",
    "tools",
    ".pydeps",
    "tests",
    ".gitattributes",
    ".gitignore",
    ".editorconfig",
    "planning.todo",
    "tasks.py",
    "designer_files",
    ".vscode",
    ".favorites.json",
    ".venv",
    ".pytest_cache",
    "__pycache__",
]

[tool.autopep8]
ignore = ["E402", "E501", "E731"]
max_line_length = 250

[tool.isort]
balanced_wrapping = true
ensure_newline_before_comments = true
group_by_package = true
import_heading_firstparty = "* Local Imports --------------------------------------------------------------------------------------->"
import_heading_gid = "* Gid Imports ----------------------------------------------------------------------------------------->"
import_heading_qt = "* Qt Imports --------------------------------------------------------------------------------------->"
import_heading_stdlib = "* Standard Library Imports ---------------------------------------------------------------------------->"
import_heading_thirdparty = "* Third Party Imports --------------------------------------------------------------------------------->"
known_gid = ["gid*"]
known_qt = ["PyQt5", "PyQt6", "PySide6", "pyqtgraph"]
length_sort = true
line_length = 200
lines_after_imports = 1
sections = [
    "FUTURE",
    "STDLIB",
    "QT",
    "THIRDPARTY",
    "GID",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
indented_import_headings = false

[tool.pytest.ini_options]
addopts = "-rA -vv --durations=0 --capture=tee-sys --show-capture=all --color=auto --code-highlight=yes"
testpaths = ["tests"]
[tool.autoflake]
# additional_imports=None
expand_star_imports = true
remove_all_unused_imports = true
remove_duplicate_keys = false
remove_unused_variables = false
ignore_init_module_imports = false

[tool.gid_tasks.imports_cleaner]
exclude_globs = [
    "**/sqf_syntax_data.py",
    "**/antistasi_logbook_resources.py",
    "**/antistasi_logbook_resources_accessor.py",
]
exclude_init_files = true
ignore_missing_import_section = true

[tool.setuptools]
packages = ["antistasi_logbook"]
[tool.setuptools.dynamic]
version = { attr = "antistasi_logbook.__version__" }
